[gd_scene load_steps=3 format=3 uid="uid://dyq8148icr2ms"]

[ext_resource type="Script" path="res://script/ChooseMatch.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://be1yrde5b2fhl" path="res://objects/sceneButton.tscn" id="4"]

[node name="ChooseMatch" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="back" type="Button" parent="."]
layout_mode = 1
offset_right = 45.0
offset_bottom = 31.0
text = "back"
flat = true

[node name="menu" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -50.0
offset_right = 154.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1

[node name="B3" parent="menu" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" parent="menu/B3" index="1"]
offset_left = 0.0
offset_top = -26.0
offset_right = 0.0
offset_bottom = 0.0
text = "B3"

[node name="B5" parent="menu" instance=ExtResource("4")]
layout_mode = 2

[node name="Label" parent="menu/B5" index="1"]
anchors_preset = 7
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.5
offset_top = -26.0
offset_right = 48.5
offset_bottom = 0.0
text = "B5"

[node name="Practice" parent="menu" instance=ExtResource("4")]
layout_mode = 2

[node name="Label" parent="menu/Practice" index="1"]
offset_left = 0.0
offset_top = -26.0
offset_right = 0.0
offset_bottom = 0.0
text = "Practice"

[connection signal="button_down" from="back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="menu/B3" to="." method="_on_B3_button_down"]
[connection signal="button_down" from="menu/B5" to="." method="_on_B5_button_down"]
[connection signal="button_down" from="menu/Practice" to="." method="_on_Practice_button_down"]

[editable path="menu/B3"]
[editable path="menu/B5"]
[editable path="menu/Practice"]
